<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/overallLayout"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:id="@+id/headderSection"
            android:background="#ffff5a49">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title"
                android:id="@+id/MainHeadder"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/MainButtons">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false"
                android:measureWithLargestChild="false"
                android:gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sit"
                        android:id="@+id/button_sit"
                        android:layout_alignTop="@+id/button_push"
                        android:layout_alignParentEnd="true"
                        android:height="100dp"
                        android:clickable="true"
                        android:paddingLeft="35dp"
                        android:paddingRight="35dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pull"
                        android:id="@+id/button_pull"
                        android:clickable="true"
                        android:height="100dp"
                        android:layout_alignTop="@+id/button_squat"
                        android:layout_alignParentStart="true"
                        android:paddingLeft="35dp"
                        android:paddingRight="35dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false"
                android:measureWithLargestChild="false"
                android:gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/squat"
                        android:id="@+id/button_squat"
                        android:width="150dp"
                        android:height="100dp"
                        android:layout_below="@+id/button_sit"
                        android:clickable="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:paddingLeft="35dp"
                        android:paddingRight="35dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dip"
                        android:id="@+id/button_dip"
                        android:clickable="true"
                        android:height="100dp"
                        android:width="150dp"
                        android:layout_below="@+id/button_pull"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:paddingLeft="35dp"
                        android:paddingRight="35dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false"
                android:measureWithLargestChild="false"
                android:gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jump"
                        android:id="@+id/button_jump"
                        android:clickable="true"
                        android:height="100dp"
                        android:layout_alignTop="@+id/button_dip"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/push"
                        android:id="@+id/button_push"
                        android:layout_below="@+id/MainHeadder"
                        android:layout_alignParentStart="true"
                        android:clickable="true"
                        android:height="100dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:id="@+id/bottomSection"
            android:background="#ff340905">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hist"
                android:id="@+id/button_hist"
                android:clickable="true"
                android:height="50dp"
                android:width="150dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sett"
                android:id="@+id/button_sett"
                android:clickable="true"
                android:height="50dp"
                android:width="150dp"
                android:layout_alignBottom="@+id/button_hist"
                android:layout_alignEnd="@+id/button_jump"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
